sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: reassignment to val
			swap = false;
                             ^AlgCombSort:17: error: reassignment to val
            	    swap = true
                         ^